--- a/WpUI/MainWindow.xaml
+++ b/WpUI/MainWindow.xaml
@@ -6,11 +6,26 @@
         xmlns:local="clr-namespace:WpUI"
         mc:Ignorable="d"
         Title="CPU Scheduling Simulation" Height="600" Width="1024" ResizeMode="NoResize">
-    <Grid>
-        <Grid HorizontalAlignment="Left" Height="570.4" VerticalAlignment="Top" Width="200" Background="#FF1C1F1F">
+    <Grid x:Name="Layout">
+        <Grid x:Name="Left_Section" HorizontalAlignment="Left" Height="570.4" VerticalAlignment="Top" Width="200" Background="#FF1C1F1F">
             <local:LeftMenu HorizontalAlignment="Left" Height="550.4" Margin="0,10,0,0" VerticalAlignment="Top" Width="200"/>
         </Grid>
-        <Grid HorizontalAlignment="Left" Height="560.4" Margin="205,10,0,0" VerticalAlignment="Top" Width="802.6"/>
+        <Grid x:Name="Right_Section" HorizontalAlignment="Left" Height="570.8" Margin="200,0,0,0" VerticalAlignment="Top" Width="818">
+            <Grid x:Name="Top" HorizontalAlignment="Left" VerticalAlignment="Top" Width="818">
+                <local:TopStatus HorizontalAlignment="Left" VerticalAlignment="Top" Width="818" Margin="0,0,0,0"/>
+            </Grid>
+            <Grid x:Name="Center" HorizontalAlignment="Left" Height="515.8" Margin="10,45,0,0" VerticalAlignment="Top" Width="798">
+                <Grid x:Name="Title" HorizontalAlignment="Left" Height="35.4" VerticalAlignment="Top" Width="798">
+                    <Label Content="Title" HorizontalAlignment="Left" Margin="30,0,0,0" VerticalAlignment="Top" Width="100" FontSize="18" FontWeight="Bold"/>
+                </Grid>
+                <Grid x:Name="Contents" HorizontalAlignment="Left" Height="475" VerticalAlignment="Top" Width="798" Margin="0,40.4,0,0">
+                    <Grid x:Name="Table" HorizontalAlignment="Left" Height="230" VerticalAlignment="Top" Width="550" Margin="0,0,0,0" Background="{DynamicResource {x:Static SystemColors.HotTrackBrushKey}}"/>
+                    <Grid x:Name="Chart" HorizontalAlignment="Left" Height="230" VerticalAlignment="Top" Width="550" Margin="0,241,0,0" Background="{DynamicResource {x:Static SystemColors.MenuBrushKey}}"/>
+                    <Grid x:Name="Wait_Time" HorizontalAlignment="Left" Height="230" VerticalAlignment="Top" Width="243" Margin="561,0,0,0" Background="{DynamicResource {x:Static SystemColors.GrayTextBrushKey}}"/>
+                    <Grid x:Name="Return_Time" HorizontalAlignment="Left" Height="230" VerticalAlignment="Top" Width="243" Margin="561,241,0,0" Background="{DynamicResource {x:Static SystemColors.ActiveCaptionBrushKey}}"/>
+                </Grid>
+            </Grid>
+        </Grid>
 
     </Grid>
 </Window>
