--- a/WpUI/LeftMenu.xaml
+++ b/WpUI/LeftMenu.xaml
@@ -15,6 +15,7 @@
                 <ListBoxItem Foreground="White" FontSize="14" FontWeight="Bold" Height="45">Item3</ListBoxItem>
                 <ListBoxItem Foreground="White" FontSize="14" FontWeight="Bold" Height="45">Item4</ListBoxItem>
                 <ListBoxItem Foreground="White" FontSize="14" FontWeight="Bold" Height="45">Item5</ListBoxItem>
+                <ListBoxItem Foreground="White" FontSize="14" FontWeight="Bold" Height="45">Item6</ListBoxItem>
             </ListBox>
         </StackPanel>
 
