--- a/WpUI/MainWindow.xaml
+++ b/WpUI/MainWindow.xaml
@@ -17,7 +17,7 @@
             <Grid x:Name="Center" HorizontalAlignment="Left" Height="515.8" Margin="10,45,0,0" VerticalAlignment="Top" Width="798">
                 <Grid x:Name="Title" HorizontalAlignment="Left" Height="35.4" VerticalAlignment="Top" Width="798">
                     <Label Content="Title" HorizontalAlignment="Left" Margin="30,0,0,0" VerticalAlignment="Center" Width="100" FontSize="18" FontWeight="Bold" Foreground="#FF7E8488"/>
-                    <Label Content="&lt; Discription &gt;" HorizontalAlignment="Left" Margin="150,0,0,0" VerticalAlignment="Center" FontSize="14" FontWeight="Bold" Foreground="#FF7E8488"/>
+                    <Label Content="&lt; Description &gt;" HorizontalAlignment="Left" Margin="150,0,0,0" VerticalAlignment="Center" FontSize="14" FontWeight="Bold" Foreground="#FF7E8488"/>
                 </Grid>
                 <Grid x:Name="Contents" HorizontalAlignment="Left" Height="475" VerticalAlignment="Top" Width="798" Margin="0,40.4,0,0">
                     <Grid x:Name="Table" HorizontalAlignment="Left" Height="230" VerticalAlignment="Top" Width="550" Margin="0,0,0,0" Background="White"/>
