--- a/WpUI/TopStatus.xaml
+++ b/WpUI/TopStatus.xaml
@@ -11,8 +11,8 @@
             <StackPanel Orientation="Horizontal" Margin="97.384,0,0,0" >
                 <Label Content="개수" Margin="0,0,0,0" Height="25" FontWeight="Bold" Foreground="Black" />
                 <Slider Margin="15,0,0,0" Height="25" Minimum="1" Value="5" Width="100" TickPlacement="Both" SmallChange="1" AutoToolTipPlacement="TopLeft" />
-                <ToggleButton Content="Auto" Margin="15,7,0,7" Width="60"/>
-                <Button Content="실행" Margin="15,7,0,7" Width="60" />
+                <ToggleButton Name="tgBtn" Content="Auto" Margin="15,7,0,7" Width="60" IsChecked="True"/>
+                <Button Content="실행" Margin="15,7,0,7" Width="60" PreviewMouseDown="Button_PreviewMouseDown" />
             </StackPanel>
         </Grid>
     </Grid>
