--- a/WpUI/LeftMenu.xaml
+++ b/WpUI/LeftMenu.xaml
@@ -10,12 +10,12 @@
         <StackPanel>
             <Label Content="Algorithm List" Foreground="White" FontWeight="Bold" FontSize="18" HorizontalAlignment="Center" HorizontalContentAlignment="Center" />
             <ListBox HorizontalAlignment="Left" Height="570.4" VerticalAlignment="Top" Width="200" Background="{x:Null}" BorderBrush="{x:Null}" Foreground="{x:Null}">
-                <ListBoxItem Name="item1" Foreground="White" Padding="15,0,0,0" FontSize="14" FontWeight="Bold" Height="45" PreviewMouseDown="item1_PreviewMouseDown"># FCFS</ListBoxItem>
-                <ListBoxItem Name="item2" Foreground="White" Padding="15,0,0,0" FontSize="14" FontWeight="Bold" Height="45" PreviewMouseDown="item2_PreviewMouseDown"># S J F</ListBoxItem>
-                <ListBoxItem Name="item3" Foreground="White" Padding="15,0,0,0" FontSize="14" FontWeight="Bold" Height="45" PreviewMouseDown="item3_PreviewMouseDown"># S R T</ListBoxItem>
-                <ListBoxItem Name="item4" Foreground="White" Padding="15,0,0,0" FontSize="14" FontWeight="Bold" Height="45" PreviewMouseDown="item4_PreviewMouseDown"># H R N</ListBoxItem>
-                <ListBoxItem Name="item5" Foreground="White" Padding="15,0,0,0" FontSize="14" FontWeight="Bold" Height="45" PreviewMouseDown="item5_PreviewMouseDown"># Priority</ListBoxItem>
-                <ListBoxItem Name="item6" Foreground="White" Padding="15,0,0,0" FontSize="14" FontWeight="Bold" Height="45" PreviewMouseDown="item6_PreviewMouseDown"># Round-Robin</ListBoxItem>
+                <ListBoxItem Name="item1" Foreground="White" Padding="15,0,0,0" FontSize="14" FontWeight="Bold" Height="45" PreviewMouseDown="item1_PreviewMouseDown" ToolTip="FCFS(비선점) 기법을 선택합니다"># FCFS</ListBoxItem>
+                <ListBoxItem Name="item2" Foreground="White" Padding="15,0,0,0" FontSize="14" FontWeight="Bold" Height="45" PreviewMouseDown="item2_PreviewMouseDown" ToolTip="SJF(비선점) 기법을 선택합니다"># S J F</ListBoxItem>
+                <ListBoxItem Name="item3" Foreground="White" Padding="15,0,0,0" FontSize="14" FontWeight="Bold" Height="45" PreviewMouseDown="item3_PreviewMouseDown" ToolTip="SRT(선점) 기법을 선택합니다"># S R T</ListBoxItem>
+                <ListBoxItem Name="item4" Foreground="White" Padding="15,0,0,0" FontSize="14" FontWeight="Bold" Height="45" PreviewMouseDown="item4_PreviewMouseDown" ToolTip="HRN(비선점) 기법을 선택합니다"># H R N</ListBoxItem>
+                <ListBoxItem Name="item5" Foreground="White" Padding="15,0,0,0" FontSize="14" FontWeight="Bold" Height="45" PreviewMouseDown="item5_PreviewMouseDown" ToolTip="우선순위(선점) 기법을 선택합니다"># Priority</ListBoxItem>
+                <ListBoxItem Name="item6" Foreground="White" Padding="15,0,0,0" FontSize="14" FontWeight="Bold" Height="45" PreviewMouseDown="item6_PreviewMouseDown" ToolTip="Round-Robin(선점) 기법을 선택합니다"># Round-Robin</ListBoxItem>
             </ListBox>
         </StackPanel>
 
