--- a/WpUI/MainWindow.xaml
+++ b/WpUI/MainWindow.xaml
@@ -23,7 +23,7 @@
                 </Grid>
                 <Grid x:Name="Contents" HorizontalAlignment="Left" Height="475" VerticalAlignment="Top" Width="798" Margin="0,40.4,0,0">
                     <Grid x:Name="Table" HorizontalAlignment="Left" Height="230" VerticalAlignment="Top" Width="550" Margin="0,0,0,0" Background="White">
-                        <DataGrid Name="tableProcess" AutoGenerateColumns="False" SelectionMode="Single" CanUserAddRows="False" SelectionUnit="FullRow" HorizontalAlignment="Left" Margin="0.0,0" VerticalAlignment="Top" Width="550" Height="230" BorderBrush="{x:Null}" Background="{x:Null}">
+                        <DataGrid Name="tableProcess" AutoGenerateColumns="False" SelectionMode="Single" CanUserAddRows="False" CanUserDeleteRows="False" SelectionUnit="FullRow" HorizontalAlignment="Left" Margin="0.0,0" VerticalAlignment="Top" Width="550" Height="230" BorderBrush="{x:Null}" Background="{x:Null}">
                             <DataGrid.Columns>
                                 <DataGridTextColumn x:Name="PTHeader1" Header="No." Width="80*" Binding="{Binding no, Mode=TwoWay}"/>
                                 <DataGridTextColumn x:Name="PTHeader2" Header="PID" Width="80*" Binding="{Binding pid, Mode=TwoWay}"/>
