--- a/WpUI/MainWindow.xaml
+++ b/WpUI/MainWindow.xaml
@@ -8,6 +8,22 @@
         mc:Ignorable="d"
         Icon="App.ico"
         Title="CPU Scheduling Simulation" Height="600" Width="1028" ResizeMode="NoResize">
+    <Window.Resources>
+        <Style x:Key="CenterCellStyle" TargetType="{x:Type DataGridCell}" >
+            <Setter Property="Template">
+                <Setter.Value>
+                    <ControlTemplate TargetType="{x:Type DataGridCell}">
+                        <Grid Background="{TemplateBinding Background}">
+                            <ContentPresenter HorizontalAlignment="Center" VerticalAlignment="Center"/>
+                        </Grid>
+                    </ControlTemplate>
+                </Setter.Value>
+            </Setter>
+        </Style>
+        <Style x:Key="CenterAlignmentColumnHeaderStyle" TargetType="{x:Type DataGridColumnHeader}">
+            <Setter Property="HorizontalContentAlignment" Value="Center"/>
+        </Style>
+    </Window.Resources>
     <Grid x:Name="Layout" Background="#FFEFEFEF">
         <Grid x:Name="Left_Section" HorizontalAlignment="Left" Height="570.4" VerticalAlignment="Top" Width="200" Background="#FF1C1F1F">
             <local:LeftMenu x:Name="lfMenu" HorizontalAlignment="Left" Height="550.4" Margin="0,10,0,0" VerticalAlignment="Top" Width="200"/>
@@ -26,13 +42,13 @@
                 </Grid>
                 <Grid x:Name="Contents" HorizontalAlignment="Left" Height="475" VerticalAlignment="Top" Width="798" Margin="0,40.4,0,0">
                     <Grid x:Name="Table" HorizontalAlignment="Left" Height="230" VerticalAlignment="Top" Width="550" Margin="0,0,0,0" Background="White">
-                        <DataGrid Name="tableProcess" AutoGenerateColumns="False" SelectionMode="Single" CanUserAddRows="False" CanUserDeleteRows="False" SelectionUnit="FullRow" HorizontalAlignment="Left" Margin="0.0,0" VerticalAlignment="Top" Width="550" Height="230" BorderBrush="{x:Null}" Background="{x:Null}">
+                        <DataGrid Name="tableProcess" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" AutoGenerateColumns="False" SelectionMode="Single" CanUserAddRows="False" CanUserDeleteRows="False" SelectionUnit="Cell" HorizontalAlignment="Left" Margin="0.0,0" VerticalAlignment="Top" Width="550" Height="230" BorderBrush="{x:Null}" Background="{x:Null}" CanUserResizeRows="False" RowHeight="20">
                             <DataGrid.Columns>
-                                <DataGridTextColumn x:Name="PTHeader1" Header="No." Width="80*" Binding="{Binding no, Mode=TwoWay}"/>
-                                <DataGridTextColumn x:Name="PTHeader2" Header="PID" Width="80*" Binding="{Binding pid, Mode=TwoWay}"/>
-                                <DataGridTextColumn x:Name="PTHeader3" Header="우선순위" Width="80*" Binding="{Binding priority, Mode=TwoWay}"/>
-                                <DataGridTextColumn x:Name="PTHeader4" Header="도착시간" Width="80*" Binding="{Binding arrived_time, Mode=TwoWay}"/>
-                                <DataGridTextColumn x:Name="PTHeader5" Header="서비스시간" Width="80*" Binding="{Binding service_time, Mode=TwoWay}"/>
+                                <DataGridTextColumn x:Name="PTHeader1" Header="No." HeaderStyle="{StaticResource CenterAlignmentColumnHeaderStyle}" Width="80*" Binding="{Binding no, Mode=TwoWay}" CellStyle="{StaticResource CenterCellStyle}"/>
+                                <DataGridTextColumn x:Name="PTHeader2" Header="PID" HeaderStyle="{StaticResource CenterAlignmentColumnHeaderStyle}" Width="80*" Binding="{Binding pid, Mode=TwoWay}" CellStyle="{StaticResource CenterCellStyle}"/>
+                                <DataGridTextColumn x:Name="PTHeader3" Header="우선순위" HeaderStyle="{StaticResource CenterAlignmentColumnHeaderStyle}" Width="80*" Binding="{Binding priority, Mode=TwoWay}" CellStyle="{StaticResource CenterCellStyle}"/>
+                                <DataGridTextColumn x:Name="PTHeader4" Header="도착시간" HeaderStyle="{StaticResource CenterAlignmentColumnHeaderStyle}" Width="80*" Binding="{Binding arrived_time, Mode=TwoWay}" CellStyle="{StaticResource CenterCellStyle}"/>
+                                <DataGridTextColumn x:Name="PTHeader5" Header="서비스시간" HeaderStyle="{StaticResource CenterAlignmentColumnHeaderStyle}" Width="80*" Binding="{Binding service_time, Mode=TwoWay}" CellStyle="{StaticResource CenterCellStyle}"/>
                             </DataGrid.Columns>
                         </DataGrid>
 
