--- a/WpUI/MainWindow.xaml
+++ b/WpUI/MainWindow.xaml
@@ -40,7 +40,7 @@
                 </Grid>
                 <Grid x:Name="Contents" HorizontalAlignment="Left" Height="475" VerticalAlignment="Top" Width="798" Margin="0,40.4,0,0">
                     <Grid x:Name="Table" HorizontalAlignment="Left" Height="230" VerticalAlignment="Top" Width="550" Margin="0,0,0,0" Background="White">
-                        <DataGrid Name="tableProcess" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" AutoGenerateColumns="False" CanUserAddRows="False" CanUserDeleteRows="False" HorizontalAlignment="Left" Margin="0.0,0" VerticalAlignment="Top" Width="550" Height="230" BorderBrush="{x:Null}" Background="{x:Null}" CanUserResizeRows="False" RowHeight="20" SelectionMode="Single" >
+                        <DataGrid Name="tableProcess" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" AutoGenerateColumns="False" CanUserAddRows="False" CanUserDeleteRows="False" HorizontalAlignment="Left" Margin="0.0,0" VerticalAlignment="Top" Width="550" Height="230" BorderBrush="{x:Null}" Background="{x:Null}" CanUserResizeRows="False" RowHeight="20" SelectionMode="Single" CanUserSortColumns="False" CanUserReorderColumns="False" >
                             <DataGrid.Columns>
                                 <DataGridTextColumn x:Name="PTHeader1" Header="No." HeaderStyle="{StaticResource CenterAlignmentColumnHeaderStyle}" Width="80*" Binding="{Binding no, Mode=TwoWay}" CellStyle="{StaticResource CenterCellStyle}"/>
                                 <DataGridTextColumn x:Name="PTHeader2" Header="PID" HeaderStyle="{StaticResource CenterAlignmentColumnHeaderStyle}" Width="80*" Binding="{Binding pid, Mode=TwoWay}" CellStyle="{StaticResource CenterCellStyle}"/>
@@ -66,17 +66,25 @@
 
                                             <TextBlock Grid.ColumnSpan="4" FontFamily="Arial" FontSize="20" FontWeight="Bold" Text="PID : "/>
                                             <TextBlock Grid.ColumnSpan="4" FontFamily="Arial" FontSize="20" FontWeight="Bold" Margin="50,0,0,0" Text="{Binding pid}"/>
+                                            <TextBlock Grid.ColumnSpan="4" FontFamily="Arial" FontSize="11" FontWeight="Bold" VerticalAlignment="Center" Margin="100,0,0,0" Text="(Priority : "/>
+                                            <TextBlock Grid.ColumnSpan="4" FontFamily="Arial" FontSize="11" FontWeight="Bold" VerticalAlignment="Center" Margin="155,0,0,0" Text="{Binding priority}"/>
+                                            <TextBlock Grid.ColumnSpan="4" FontFamily="Arial" FontSize="11" FontWeight="Bold" VerticalAlignment="Center" Margin="162,0,0,0" Text=")"/>
                                             <TextBlock Grid.Row="1" FontWeight="Bold" Text="Arrived Time : "/>
                                             <TextBlock Grid.Row="1" Grid.Column="1" Text="{Binding arrived_time}"/>
                                             <TextBlock Grid.Row="1" Grid.Column="1" Text="ms" Margin="17,0,0,0"/>
 
-                                            <TextBlock Grid.Row="1" Grid.Column="2" FontWeight="Bold" Text="Priority : "/>
-                                            <TextBlock Grid.Row="1" Grid.Column="3" Text="{Binding priority}"/>
-
+                                            <TextBlock Grid.Row="1" Grid.Column="2" FontWeight="Bold" Text="Wait Time : "/>
+                                            <TextBlock Grid.Row="1" Grid.Column="3" Text="{Binding wait_time}"/>
+                                            <TextBlock Grid.Row="1" Grid.Column="3" Text="ms" Margin="17,0,0,0"/>
+                                            
                                             <TextBlock Grid.Row="2" FontWeight="Bold" Text="Service Time : "/>
                                             <TextBlock Grid.Row="2" Grid.Column="1" Text="{Binding service_time}"/>
                                             <TextBlock Grid.Row="2" Grid.Column="1" Text="ms" Margin="17,0,0,0"/>
 
+                                            <TextBlock Grid.Row="2" Grid.Column="2" FontWeight="Bold" Text="Return Time : "/>
+                                            <TextBlock Grid.Row="2" Grid.Column="3" Text="{Binding return_time}"/>
+                                            <TextBlock Grid.Row="2" Grid.Column="3" Text="ms" Margin="17,0,0,0"/>
+                                            
                                             <!--<TextBlock Grid.Row="2" Grid.Column="2" FontWeight="Bold" Text="Magnetic Field?"/>
                                             <TextBlock Grid.Row="2" Grid.Column="3" Text="{Binding no}"/>-->
                                         </Grid>
