--- a/WpUI/TopStatus.xaml
+++ b/WpUI/TopStatus.xaml
@@ -16,9 +16,78 @@
         <Grid HorizontalAlignment="Left" Height="40" VerticalAlignment="Top" Width="403.882" Margin="388.718,0,0,0">
             <StackPanel Orientation="Horizontal" Margin="97.384,0,0,0" >
                 <Label Content="개수" Margin="0,0,0,0" Height="25" FontWeight="Bold" Foreground="Black" />
-                <Slider Name="sliderProcess" Margin="15,0,0,0" Height="25" Minimum="1" Value="5" Width="100" TickPlacement="Both" SmallChange="1" AutoToolTipPlacement="TopLeft" ToolTip="프로세스의 개수를 설정합니다" />
-                <ToggleSwitch:HorizontalToggleSwitch x:Name="tgBtn" HorizontalAlignment="Left" Height="20" Margin="10,0,10,0" VerticalAlignment="Stretch" Width="84" IsChecked="True" UncheckedContent="수동" CheckedContent="자동" ToolTip="프로세스 생성 방법을 결정합니다."/>
-                <Button Content="R" Margin="15,7,0,7" Width="30" PreviewMouseDown="Button_PreviewMouseDown" />
+                <Slider Name="sliderProcess" Margin="5,0,0,0" Height="25" Minimum="1" Value="5" Width="100" TickPlacement="Both" SmallChange="1" AutoToolTipPlacement="TopLeft" ToolTip="프로세스의 개수를 설정합니다" />
+                <ToggleSwitch:HorizontalToggleSwitch x:Name="tgBtn" HorizontalAlignment="Left" Height="20" Margin="5,0,10,0" VerticalAlignment="Stretch" Width="84" IsChecked="True" UncheckedContent="수동" CheckedContent="자동" ToolTip="프로세스 생성 방법을 결정합니다."/>
+                <Button Content="" Margin="0,6,0,6" Width="70" PreviewMouseDown="Button_PreviewMouseDown" BorderBrush="{x:Null}" Style="{DynamicResource ButtonStyle1}" >
+                    <Button.Resources>
+                        <Style x:Key="FocusVisual">
+                            <Setter Property="Control.Template">
+                                <Setter.Value>
+                                    <ControlTemplate>
+                                        <Rectangle Margin="2" SnapsToDevicePixels="true" Stroke="{DynamicResource {x:Static SystemColors.ControlTextBrushKey}}" StrokeThickness="1" StrokeDashArray="1 2"/>
+                                    </ControlTemplate>
+                                </Setter.Value>
+                            </Setter>
+                        </Style>
+                        <SolidColorBrush x:Key="Button.Static.Background" Color="#FFDDDDDD"/>
+                        <SolidColorBrush x:Key="Button.Static.Border" Color="#FF707070"/>
+                        <SolidColorBrush x:Key="Button.MouseOver.Background" Color="#FFBEE6FD"/>
+                        <SolidColorBrush x:Key="Button.MouseOver.Border" Color="#FF3C7FB1"/>
+                        <SolidColorBrush x:Key="Button.Pressed.Background" Color="#FFC4E5F6"/>
+                        <SolidColorBrush x:Key="Button.Pressed.Border" Color="#FF2C628B"/>
+                        <SolidColorBrush x:Key="Button.Disabled.Background" Color="#FFF4F4F4"/>
+                        <SolidColorBrush x:Key="Button.Disabled.Border" Color="#FFADB2B5"/>
+                        <SolidColorBrush x:Key="Button.Disabled.Foreground" Color="#FF838383"/>
+                        <Style x:Key="ButtonStyle1" TargetType="{x:Type Button}">
+                            <Setter Property="FocusVisualStyle" Value="{StaticResource FocusVisual}"/>
+                            <Setter Property="Background" Value="{StaticResource Button.Static.Background}"/>
+                            <Setter Property="BorderBrush" Value="{StaticResource Button.Static.Border}"/>
+                            <Setter Property="Foreground" Value="{DynamicResource {x:Static SystemColors.ControlTextBrushKey}}"/>
+                            <Setter Property="BorderThickness" Value="1"/>
+                            <Setter Property="HorizontalContentAlignment" Value="Center"/>
+                            <Setter Property="VerticalContentAlignment" Value="Center"/>
+                            <Setter Property="Padding" Value="1"/>
+                            <Setter Property="Template">
+                                <Setter.Value>
+                                    <ControlTemplate TargetType="{x:Type Button}">
+                                        <Border x:Name="border" BorderBrush="{TemplateBinding BorderBrush}" BorderThickness="{TemplateBinding BorderThickness}" Background="{TemplateBinding Background}" SnapsToDevicePixels="true">
+                                            <ContentPresenter x:Name="contentPresenter" Focusable="False" HorizontalAlignment="{TemplateBinding HorizontalContentAlignment}" Margin="{TemplateBinding Padding}" RecognizesAccessKey="True" SnapsToDevicePixels="{TemplateBinding SnapsToDevicePixels}" VerticalAlignment="{TemplateBinding VerticalContentAlignment}"/>
+                                        </Border>
+                                        <ControlTemplate.Triggers>
+                                            <Trigger Property="IsDefaulted" Value="true">
+                                                <Setter Property="BorderBrush" TargetName="border" Value="{DynamicResource {x:Static SystemColors.HighlightBrushKey}}"/>
+                                            </Trigger>
+                                            <Trigger Property="IsMouseOver" Value="true">
+                                                <!--<Setter Property="BorderBrush" TargetName="border" Value="{StaticResource Button.MouseOver.Border}"/>-->
+                                                <Setter Property="Background" TargetName="border">
+                                                    <Setter.Value>
+                                                        <ImageBrush ImageSource="run_btn2.png" Opacity="0.6"/>
+                                                    </Setter.Value>
+                                                </Setter>
+                                            </Trigger>
+                                            <Trigger Property="IsPressed" Value="true">
+                                                <!--<Setter Property="Background" TargetName="border" Value="{StaticResource Button.Pressed.Background}"/>-->
+                                                <Setter Property="Background" TargetName="border">
+                                                    <Setter.Value>
+                                                        <ImageBrush ImageSource="run_btn2.png" Opacity="0.3"/>
+                                                    </Setter.Value>
+                                                </Setter>
+                                            </Trigger>
+                                            <Trigger Property="IsEnabled" Value="false">
+                                                <Setter Property="Background" TargetName="border" Value="{StaticResource Button.Disabled.Background}"/>
+                                                <Setter Property="BorderBrush" TargetName="border" Value="{StaticResource Button.Disabled.Border}"/>
+                                                <Setter Property="TextElement.Foreground" TargetName="contentPresenter" Value="{StaticResource Button.Disabled.Foreground}"/>
+                                            </Trigger>
+                                        </ControlTemplate.Triggers>
+                                    </ControlTemplate>
+                                </Setter.Value>
+                            </Setter>
+                        </Style>
+                    </Button.Resources>
+                    <Button.Background>
+                        <ImageBrush ImageSource="run_btn2.png"/>
+                    </Button.Background>
+                </Button>
             </StackPanel>
         </Grid>
     </Grid>
