--- a/WpUI/MainWindow.xaml
+++ b/WpUI/MainWindow.xaml
@@ -7,7 +7,7 @@
         xmlns:mschart="clr-namespace:System.Windows.Forms.DataVisualization.Charting;assembly=System.Windows.Forms.DataVisualization"
         mc:Ignorable="d"
         Icon="App.ico"
-        Title="CPU Scheduling Simulation" Height="600" Width="1028" ResizeMode="NoResize">
+        Title="CPU Scheduling Simulation" Height="600" Width="1028" ResizeMode="NoResize" Loaded="Window_Loaded">
     <!-- F1 Key Binding -->
     <Window.CommandBindings>
         <CommandBinding Command="ApplicationCommands.Help" Executed="Window_Help_Executed"/>
@@ -193,6 +193,5 @@
                 </Grid>
             </Grid>
         </Grid>
-
     </Grid>
 </Window>
