--- a/WpUI/MainWindow.xaml
+++ b/WpUI/MainWindow.xaml
@@ -169,7 +169,11 @@
                     </Grid>
                     <Grid x:Name="Chart" HorizontalAlignment="Left" Height="230" VerticalAlignment="Top" Width="550" Margin="0,241,0,0" Background="White">
                         <WindowsFormsHost x:Name="WFH_Process">
-                            <mschart:Chart x:Name="chartProcess"/>
+                            <mschart:Chart x:Name="chartProcess">
+                                <mschart:Chart.Legends>
+                                    <mschart:Legend Docking="Bottom"/>
+                                </mschart:Chart.Legends>
+                            </mschart:Chart>
                         </WindowsFormsHost>
                     </Grid>
                     <Grid x:Name="Wait_Time" HorizontalAlignment="Left" Height="230" VerticalAlignment="Top" Width="243" Margin="561,0,0,0" Background="White">
